--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.2",
-    "next": "15.2.1",
+    "next": "^15.3.2",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
