--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.2",
+    "framer-motion": "^12.10.0",
     "next": "^15.3.2",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
