--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.2",
     "framer-motion": "^12.10.0",
     "next": "^15.3.2",
+    "next-auth": "^5.0.0-beta.27",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
