--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/server.js",
     "start": "node server/server.js",
-    "swagger": "node server/swagger.js"
+    "swagger": "node server/swagger.js",
+    "postinstall": "prisma generate" 
   },
   "keywords": [],
   "author": "",
