--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build": "tsc --build",
     "start:dev": "nodemon ./server/src/index.ts",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "postinstall": "npx prisma generate --schema ./server/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
