--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google/genai": "^1.0.1",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.8.2",
     "@types/bcrypt": "^5.0.2",
