--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.21",
+    "@types/swagger-ui-express": "^4.1.8",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -28,7 +29,9 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.8.1",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
