--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.2",
     "framer-motion": "^12.10.0",
     "marked": "^15.0.11",
+    "motion": "^12.14.0",
     "motion-plus": "^0.1.9",
     "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.27",
